# learning

./: .gitignore  README.md
android/AudioApp/app/: build.gradle
android/AudioApp/gradle/wrapper/: gradle-wrapper.properties
rust/: .gitignore  readme.md
rust/ch08/: Cargo.toml
rust/ch08/src/: main.rs
rust/ch09/hello/: hello.txt
rust/ch09/hello/src/: main.rs
rust/ch10/Pair/: Cargo.toml
rust/ch10/Pair/src/: .main.rs.swp  main.rs
rust/ch10/hello/: Cargo.toml
rust/ch10/hello/src/: lib.rs
rust/ch10/largest/: Cargo.toml
rust/ch10/largest/src/: main.rs
rust/ch11/adder/: Cargo.toml
rust/ch12/minigrep/src/: lib.rs
rust/ch13/minigrep/: Cargo.toml
rust/ch13/minigrep/src/: lib.rs
rust/ch13/workout/: Cargo.toml
rust/ch13/workout/src/: .main.rs.swp  lib.rs  main.rs
rust/ch15/code/: Cargo.toml
rust/ch16/: Cargo.toml
rust/ch16/app/src/: main.rs
rust/ch16/message_pass/: Cargo.toml
rust/ch16/shared_memory/: Cargo.toml
rust/ch17/blog2/: Cargo.toml
rust/ch17/code/: Cargo.toml
rust/ch18/code/: Cargo.toml
rust/diesel/diesel_demo/: .env  Cargo.toml
rust/hello/: Cargo.toml  hello.html
rust/hello/src/: lib.rs
rust/http/src/: main.rs
rust/ownership/: Cargo.toml
rust/ownership/src/: main.rs
rust/restaurant/: Cargo.toml
rust/restaurant/src/: lib.rs
rust/test/: Cargo.toml  client.py
rust/test/src/: main.rs
spring/eureka-client/: pom.xml
spring/eureka-consumer/: pom.xml
spring/eureka-consumer-feign/: pom.xml
spring/eureka-consumer-ribbon/: pom.xml
spring/eureka-server/: pom.xml
sql/: .user_design.md.swp  user_design.md
(+48 files in other folders)
